--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -12,11 +12,9 @@
             {{ .title }}
         </h2>
 
-        {{ if .description }}
         <div class="prose dark:prose-invert mb-8">
             {{ readFile "data/works/realworld.md" | markdownify }}
         </div>
-        {{ end }}
 
         <div>
             {{ range .projects }}
@@ -24,8 +22,13 @@
             <h3 class="pb-1 font-bold border-b-2 border-purple-500 inline-block mb-4">
                 {{ .title }}
             </h3>
+            {{ if .description }}
+            <div class="prose dark:prose-invert mb-8">
+                {{ readFile (print "data/works/" .description ".md") | markdownify }}
+            </div>
             {{ end }}
-            <div class="grid md:grid-cols-2 gap-4 mb-4">
+            {{ end }}
+            <div class="grid md:grid-cols-2 gap-4 mb-8">
                 {{ range .apps }}
                 {{ $borders := dict "green" "border-green-500" "blue" "border-blue-500" "orange" "border-orange-500" "black" "border-black dark:border-white"
     "red" "border-red-500" "teal" "border-teal-500" "primary" "border-purple-500" }}
