change umami js

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -2,5 +2,4 @@
     integrity="sha512-koV7rZjdkgQouiHiyzaGG1FblTuAkJVypXhzDxDNC74SdnKlGjJCkFwVcGP/wx5bwplcpnOcCy2ZJAGaVB5qmw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<script async defer data-website-id="2648f1a5-ad58-4475-aa29-6cc364fb1bfa"
-    src="https://umami.okami101.io/umami.js"></script>
+<script async src="https://umami.okami101.io/script.js" data-website-id="2648f1a5-ad58-4475-aa29-6cc364fb1bfa"></script>
