switch tu giscus

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,3 +1,5 @@
-<script src="https://utteranc.es/client.js" repo="adr1enbe4udou1n/blog" issue-term="pathname"
-    theme="preferred-color-scheme" crossorigin="anonymous" async>
+<script src="https://giscus.app/client.js" data-repo="adr1enbe4udou1n/blog" data-repo-id="R_kgDOGkejPw"
+    data-category="General" data-category-id="DIC_kwDOGkejP84CYkw3" data-mapping="pathname" data-strict="0"
+    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="preferred_color_scheme"
+    data-lang="fr" crossorigin="anonymous" async>
     </script>
