--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -78,7 +78,7 @@
         title="Run on K3s over Hetzner Cloud" />
 
       <a href="https://concourse.okami101.io/teams/main/pipelines/okami-blog" target="_blank">
-        <img src="https://concourse.okami101.io/api/v1/teams/main/pipelines/okami-blog/badge" />
+        <img src="https://concourse.okami101.io/api/v1/teams/main/pipelines/okami-blog/badge" alt="Blog build status" />
       </a>
     </div>
     <div class="hidden lg:block">
