fix scenario 1 php result

--- a/layouts/shortcodes/chart.html
+++ b/layouts/shortcodes/chart.html
@@ -24,13 +24,15 @@
                 },
               }
             },
-            {{ if .Get "max" }}
             y: {
-              stacked: {{ .Get "stacked" }},
+              {{ if .Get "stacked" }}
+              stacked: {{ .Get "stacked"  }},
+              {{ end }}
               beginAtZero: true,
+              {{ if .Get "max" }}
               suggestedMax: {{ .Get "max" }},
+              {{ end }}
             }
-            {{ end }}
           },
         },
         data: {
