--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -76,6 +76,9 @@
     <div class="flex items-center gap-4">
       <img src="/kube.png" width="30" height="30" alt="Kubernetes"
         title="Run on K3s over Hetzner Cloud" />
+      <a href="https://concourse.okami101.io/teams/main/pipelines/okami-blog" target="_blank">
+        <img src="https://concourse.okami101.io/api/v1/teams/main/pipelines/okami-blog/badge" alt="build" />
+      </a>
     </div>
     <div class="hidden lg:block">
       {{/* Copyright */}}
