--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -74,8 +74,8 @@
   {{ end }}
   <div class="flex items-center justify-between">
     <div class="flex items-center gap-4">
-      <img src="/kube.png" width="30" height="30" alt="Kubernetes"
-        title="Run on K3s over Hetzner Cloud" />
+      <img src="/talos-logo.svg" width="30" height="30" alt="Talos Linux"
+        title="Run on Talos Linux over Hetzner Cloud" />
     </div>
     <div class="hidden lg:block">
       {{/* Copyright */}}
